<resources>
    <string name="app_name">Assignment 2</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="play_game">Play Game</string>
    <string name="done">Done</string>
    <string name="difficulty">Difficulty:</string>
    <string name="clear_high_scores">Clear High Scores</string>
    <string name ="showScore">Score: %1s</string>
    <string name ="showSkips">Skips: %1s</string>
    <string name ="showLives">Lives: %1s</string>
    <string name="twitter">Post score to Twitter</string>
    <string name="menu">Main Menu</string>
    <string name="gameover">Game Over</string>
    <string name="high_scores2">High Scores:</string>
    <string name="hard">Hard:</string>
    <string name="medium">Medium:</string>
    <string name="easy">Easy:</string>
    <string name="hint">Shake phone to skip question.</string>
    <string name="physics_quiz">Physics Quiz</string>
</resources>
