<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/night">

    <Spinner
        android:id="@+id/difficulty"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginTop="200dp"
        android:entries="@array/difficulty"
        android:theme="@style/spinnerStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/done"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="452dp"
        android:text="@string/done"
        android:textSize="20sp"
        android:onClick="doneClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/difficulty"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/difficulty" />

    <Button
        android:id="@+id/clearScores"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:textSize="20sp"
        android:onClick="clearScores"
        android:text="@string/clear_high_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>